# visual-slam

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_visualizer  Main.cpp  README.md  docker-compose.yaml  docker_up.sh  odometry.env  odometry.rviz
include/: backend.h  detector.h  estimation.h  feature.h  frame.h  frontend.h  landmark.h  map.h  mappoint.h  matcher.h  observation.h  optimization.h  optimizer.h  rotation.h  system.h  tracker.h  triangulator.h  viewer.h
src/: CMakeLists.txt  backend.cpp  backend.h  context.h  detector.cpp  estimation.cpp  frontend.cpp  frontend.h  map.cpp  mappoint.cpp  matcher.cpp  optimization.cpp  package.xml  sequence.cpp  sequence.h  system.cpp  system.h  tracker.cpp  triangulator.cpp  viewer.cpp  viewer.h  vizualization.cpp  vizualization.h
src/map/: CMakeLists.txt  map.cpp  map.h
src/optimize/: CMakeLists.txt  optimization.cpp  optimization.h
src/sensor/: CMakeLists.txt  camera.cpp  feature.h  frame.h  mappoint.cpp  mappoint.h  observation.h
src/solve/: CMakeLists.txt  detector.cpp  detector.h  estimation.cpp  estimation.h  matcher.cpp  matcher.h  tracker.cpp  tracker.h  triangulator.cpp  triangulator.h
stereo_vision/: CMakeLists.txt  main.cpp  stereo_vision.cpp  stereo_vision.h
visual_odometry/: CMakeLists.txt  camera.cpp  camera.h  feature.h  frame.cpp  frame.h  frontend.cpp  frontend.h  kittislam.cpp  odometry.cpp  odometry.h  sequence.cpp  sequence.h  tracker.h  viewer.cpp  viewer.h  vo_main.cpp
