<?xml version="1.0"?>
<package>
    <name>stereo</name>
    <version>1.0.2</version>
    <description>
        Stereo Visual Odometry
    </description>

    <maintainer email="andrew.presland@gmail.com">Andrew Presland</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>image_transport_plugins</build_depend>


    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>image_transport_plugins</run_depend>

</package>